[package]
name = "chordflow"
version = "0.1.0"
description = "ChordFlow desktop application"
authors = ["ChordFlow"]
edition = "2021"

[lib]
name = "chordflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
